<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimerFondo"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:text="@string/peticionIP"
        android:textColor="@color/letrasVista1"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/primerOcteto1"
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.66"
            android:ems="10"
            android:textColor="@color/letrasVista1"
            android:inputType="number"
            android:text="192" />

        <TextView
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:textColor="@color/letrasVista1"
            android:layout_weight="0.1"
            android:text="."
            android:textSize="60dp" />

        />

        <EditText
            android:id="@+id/segundoOcteto2"
            android:layout_width="3dp"
            android:textColor="@color/letrasVista1"
            android:layout_height="wrap_content"
            android:layout_weight="0.66"
            android:ems="10"
            android:inputType="number"
            android:text="168" />

        <TextView
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="."
            android:textColor="@color/letrasVista1"
            android:textSize="60dp" />

        <EditText
            android:textColor="@color/letrasVista1"
            android:id="@+id/tercerOcteto1"
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.66"
            android:ems="10"
            android:inputType="number"
            android:text="123" />

        <TextView
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:textColor="@color/letrasVista1"
            android:layout_weight="0.1"
            android:text="."
            android:textSize="60dp" />

        <EditText
            android:id="@+id/cuartoOcteto1"
            android:layout_width="3dp"
            android:textColor="@color/letrasVista1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.66"
            android:ems="10"
            android:inputType="number"
            android:text="123" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textColor="@color/letrasVista1"
            android:text="New RadioButton" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/letrasVista1"
            android:layout_gravity="center"
            android:text="New RadioButton" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/letrasVista1"
            android:layout_gravity="center"
            android:text="New RadioButton" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="30dp"
            >

            <Button
                android:id="@+id/botonAtraz1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="80dp"
                android:text="@string/atras" />
            <Button
                android:id="@+id/botonSiguiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/siguiente" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>